# scikit-image-data

./: LICENSE  README.md  pyproject.toml
skimagedata/: __init__.py
skimagedata/data/: __init__.py
