[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "skimagedata"
author = "Riadh Fezzani"
author-email = "rfezzani@gmail.com"
home-page = "https://github.com/rfezzani/scikit-image-data"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
